<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Student Alarm Clock</string>
    <string name="alarms">Alarms clock</string>
    <string name="timer">Timer</string>
    <string name="new_alarm">New alarm clock</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_alarm">Edit the alarm clock</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="description">Description</string>
    <string name="add_description">Add description</string>
    <string name="once">Once</string>
    <string name="daily">Daily</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="mon">Mo</string>
    <string name="tue">Tu</string>
    <string name="wed">We</string>
    <string name="thu">Th</string>
    <string name="fri">Fr</string>
    <string name="sat">Sa</string>
    <string name="sun">Su</string>
    <string name="days_short">d</string>
    <string name="hours_short">h</string>
    <string name="minutes_short">m</string>
    <string name="seconds_short">s</string>
    <string name="alarm_without_description">Alarm at %s</string>
    <string name="select_days">Select days</string>
    <string name="alarm_time">Alarm time</string>
    <string name="set">Set</string>
    <string name="ok">OK</string>
    <string name="alarm_disabled_no_permission">Alarm disabled</string>
    <string name="permissions_required">Permissions required</string>
    <string name="permissions_message">Required: %s</string>
    <string name="settings">Settings</string>
    <string name="no_alarms">There are no alarm clocks</string>
    <string name="delete_alarm">Delete the alarm clock?</string>
    <string name="delete_alarms">Delete %d alarms?</string>
    <string name="selected">Selected: %d</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="dismiss">Dismiss</string>
    <string name="enter_description">Enter description</string>
    <string name="error">Error</string>
    <string name="invalid_time">Invalid time</string>
    <string name="alarm_saved">The alarm is saved</string>
    <string name="alarm_updated">The alarm is updated</string>
    <string name="alarm_deleted">The alarm is deleted</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_required">Permission required</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="click_to_select_the_time">Tap to select time</string>
    <string name="configure_permissions_and_try_again">Configure permissions and try again</string>
    <string name="open_app_settings_manually">Open app settings manually</string>
    <string name="alarm_in">Alarm in %1$s</string>
    <string name="alarm_in_few_seconds">Alarm in few seconds</string>
    <string name="checking_missed_alarms">Checking missed alarms</string>
    <string name="tap_to_dismiss">Tap to dismiss</string>
    <string name="permission_overlay">show over other apps</string>
    <string name="permission_exact_alarm">set alarms</string>
    <string name="permission_notification">notifications</string>
    <string name="permissions_dialog_message">For alarms to work correctly, you need to grant:\n\n• %s</string>
    <string name="clock">Clock</string>
    <string name="current_time">Current time</string>
    <string name="current_date">Current date</string>
    <string name="weather_loading">Loading the weather…</string>
    <string name="weather_location_error">Could\'t determine location</string>
    <string name="weather_network_error">There is no network connection</string>
    <string name="weather_refresh">Refresh weather</string>
    <string name="city_undefined">City undefined</string>
    <string name="no_internet">No internet connection</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="weather_could_not_be_updated">Weather could not be updated</string>
    <string name="weather_last_updated">Last updated: %s</string>
    <string name="location_not_determined">Location not determined</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="weather_api_key_invalid">Invalid API key</string>
    <string name="weather_location_not_found">Location not found</string>
    <string name="weather_too_many_requests">Too many requests</string>
    <string name="weather_server_error">Server error</string>
    <string name="weather_error">Weather error</string>
    <string name="open_settings">Open settings</string>
    <string name="enable_location_services">Please enable location services</string>
    <string name="location_permission_denied_forever">Location permission permanently denied. Please enable in app settings.</string>
    <string name="weather">Weather</string>
    <string name="alarm_not_found">Alarm not found</string>
    <string name="location_permission_required">Location permission required</string>
    <string name="permissions_required_short">Permissions required</string>
</resources>